plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT" apply false
    id "dev.architectury.loom" version "1.17-SNAPSHOT" apply false
    id "net.fabricmc.fabric-loom" version "1.16-SNAPSHOT" apply false
}

//architectury {
//    minecraft = rootProject.minecraft_version
//}

subprojects {
    apply plugin: "dev.architectury.loom"
    //apply plugin: "net.fabricmc.fabric-loom"

    loom {
        silentMojangMappingsLicense()
    }

    // With disableObfuscation=true (MC 26.1+), loom does not create a remapJar task.
    // The architectury plugin expects it, so we create one with the correct type.
    if (tasks.findByName("remapJar") == null) {
        tasks.create("remapJar", net.fabricmc.loom.task.RemapJarTask) {
            archiveClassifier.set("")
            inputFile.set(tasks.jar.archiveFile)
            dependsOn tasks.jar
        }
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        // No mappings needed - MC 26.1+ is unobfuscated (fabric.loom.disableObfuscation=true)

        implementation "org.json:json:${json_version}"
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "base"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    base {
        archivesName = rootProject.archives_base_name
    }
    version = rootProject.mod_version
    group = rootProject.maven_group

    dependencies {
        implementation ("net.kyori:adventure-text-minimessage:4.17.0")
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
        mavenCentral();
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 25
    }

    java {
        withSourcesJar()
    }
}
